# xTrader

./: .gitignore  Cargo.toml  README.md  run_e2e_tests.sh  start-all.sh
data/: fake_dataset.json
docs/: architecture.md  flow.md  matching_engine_architecture.md  plan.md  rust_techniques_used.md  sequence_diagrams.md  trader_front_user_tutorial.md  transaction.md
scripts/: run_tests.sh
simulator/: Cargo.toml  run_simulator.sh
simulator/src/: main.rs
src/: main.rs  server.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs  websocket.rs
src/cache/: lockfree_cache.rs  write_behind_cache.rs
src/data/: fake_data.rs  fake_dataset.json  loader.rs  mod.rs
src/db/: async_commit.rs  mod.rs  models.rs  optimized_pool.rs  repository.rs
src/matching_engine/: engine.rs  mod.rs  model.rs  order_book.rs  orderbook_tracker.rs  ultra_fast_engine.rs
src/mdp/: api.rs  cache.rs  consumer.rs  mod.rs  model.rs  publisher.rs
src/monitoring/: dashboard.rs  log_analyzer.rs  mod.rs  notification_system.rs  system_health.rs
src/mq/: backup_queue.rs  health_monitor.rs  kafka_consumer.rs  kafka_producer.rs  mod.rs  rabbitmq_consumer.rs  rabbitmq_producer.rs  recovery_manager.rs  redis_consumer.rs  redis_streams.rs
src/performance/: batch_processor.rs  cache_optimizer.rs  metrics_collector.rs  mod.rs  (+1 more)
test_project/: Cargo.toml
test_project/tests/: unit_tests.rs
tests/: e2e_trading_test.rs  integration_tests.rs  monitoring_tests.rs  mq_tests.rs  performance_tests.rs  simple_tests.rs  unit_tests.rs
trader_front/: .env  README.md  package-lock.json  package.json
(+30 files in other folders)
